--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: self-hosted
     steps:
     - uses: actions/checkout@v2
-    - name: Build app
+    - name: Build proxy
       run: |
-        ls -la
+        docker-compose down --remove-orphans
+        docker-compose build
+        docker-compose up -d
